:bug: fix buttons spacing, header and icon

--- a/style.css
+++ b/style.css
@@ -144,7 +144,6 @@ body, html {
     cursor: move;
     display: flex;
     align-items: center;
-    gap: 4px;
     padding-left: 4px;
 }
 
@@ -157,6 +156,7 @@ body, html {
     overflow: hidden;
     text-indent: -9999px;
     cursor: default;
+    margin-right: 4px;
 }
 
 #preview header:hover span:nth-of-type(1) {
@@ -180,7 +180,6 @@ body, html {
 
 iframe {
     width: 100%;
-    height: 100%;
+    height: calc(100% - 16px);
     position: relative;
-    /* z-index: -1; needed to drag size; controlled by js */
 }
